.metadata/.plugins/org.eclipse.cdt.ui/Modelo_Orquesta.build.log
14:49:48 **** Incremental Build of configuration Debug for project Modelo_Orquesta ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Musico.o" "..\\src\\Musico.c" 
In file included from ..\src\Musico.c:8:0:
..\src\Musico.h:56:2: error: #endif without #if
 #endif
  ^~~~~

14:49:48 Build Failed. 1 errors, 0 warnings. (took 416ms)

